--- a/frontend/src/home.css
+++ b/frontend/src/home.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 body {
-    background-color: rgb(50, 50, 60);
+    background-color: rgb(50, 50, 70);
     color: white;
 }
 
@@ -16,81 +16,178 @@ div {
 .blur-content {
     filter: blur(2px);
 }
-
-.navigate:hover {
-    cursor: pointer;
-}
-
-.home-menu-button {
-    display: inline-flex;
-    flex-basis: auto;
-    font-size: 2.8em;
-    transform: scale(1);
-    transition: transform 100ms linear;
-    background-color: rgb(0, 0, 0);
-    border-radius: 30px;
-    padding: 10px;
-    text-align: center;
-    margin-inline: 100px;
-    align-items: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-.home-menu-button > div {
+.header {
     display: flex;
-    justify-content: center;
-    background-color: rgb(60, 60, 70);
-    border-radius: 30px;
-    padding: 10px;
-    width: 350px;
-    height: 200px;
-    margin-right: 20%;
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin: auto;
 }
-.home-menu-button:hover {
+.header > button {
+    text-align: center;
+    font-size: min(10vw, 10vh, 3em);
+    background: none;
+    border: none;
+}
+.header > img {
+    width: min(10vw, 10vh, 70px);
+    user-select: none;
+}
+.header:hover {
     cursor: pointer;
-    transform: scale(1.1);
-    transition: transform 100ms linear;
 }
-.crossed-swords {
-    width: 80px;
-    height: 80px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 60px;
-    transform: rotate(0deg);
-    transition: transform 100ms linear;
+.header > button:hover {
+    cursor: pointer;
 }
-.online-button > div > .black-king {
-    width: 100px;
-    height: 100px;
-    margin-top: 100px;
-    transform: rotate(0deg);
-    transition: transform 100ms linear;
-}
-.online-button > div > .white-king {
-    width: 100px;
-    height: 100px;
-    transform: rotate(0deg);
-    transition: transform 100ms linear;
-}
-.online-button:hover > div > img.crossed-swords {
-    transform: rotate(-9deg);
-    transition: transform 250ms ease-in-out;
-}
-.online-button:hover > div > img.black-king {
-    transform: rotate(30deg);
-    transition: transform 250ms linear;
-}
-.online-button:hover > div > img.white-king {
-    transform: rotate(-20deg);
-    transition: transform 250ms linear;
-}
-.offline-button:hover > div > img.white-king {
-    transform: rotate(-12deg);
-    transition: transform 250ms linear;
-}
+
 .home-menu {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-content: center;
+    height: 80vh;
+}
+
+@media (min-width: 800px), (orientation: landscape) {
+    .game {
+        display: flex;
+        justify-content: center;
+    }
+    .game > div {
+        position: absolute;
+    }
+
+    .home-menu-button {
+        display: inline-flex;
+        flex-basis: auto;
+        font-size: 4vw;
+        transform: scale(1);
+        transition: transform 100ms linear;
+        background-color: rgb(30, 30, 50);
+        border-radius: 30px;
+        padding: 10px;
+        text-align: center;
+        margin-inline: 7vw;
+        align-items: center;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        justify-content: space-between;
+        height: 22vh;
+        position: relative;
+        border-bottom: solid 1vh black;
+    }
+    .home-menu-button > div {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        width: 20%;
+        min-width: 22vh;
+        height: 100%;
+        position: relative;
+    }
+    .home-menu-button > p {
+        width: 80%;
+    }
+    .home-menu-button:hover {
+        cursor: pointer;
+        transform: scale(1.03);
+        transition: transform 100ms linear;
+        background-color: rgb(40, 40, 60);
+    }
+    .online-button > div > img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 40%;
+        transform: rotate(0deg) translate(-50%, -50%);
+        transform-origin: 0% 0%;
+        transition: transform 100ms linear;
+    }
+    .offline-button > div > img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 50%;
+        transform: rotate(0deg) translate(-50%, -50%);
+        transform-origin: 0% 0%;
+        transition: transform 100ms linear;
+    }
+    .online-button:hover > div > img {
+        transform: rotate(-15deg) translate(-50%, -50%);
+        transition: transform 100ms ease-in-out;
+    }
+    .offline-button:hover > div > img {
+        transform: rotate(-15deg) translate(-50%, -50%);
+        transition: transform 100ms linear;
+    }
+}
+
+@media (max-width: 800px) and (orientation: portrait) {
+    .home-menu-button {
+        display: inline-flex;
+        flex-basis: auto;
+        flex-direction: column;
+        font-size: 4vw;
+        transform: scale(1);
+        transition: transform 100ms linear;
+        background-color: rgb(30, 30, 50);
+        border-radius: 30px;
+        padding: 10px;
+        text-align: center;
+        margin-inline: 7vw;
+        align-items: center;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        justify-content: space-between;
+        height: 22vh;
+        position: relative;
+        border-bottom: solid 1vh black;
+    }
+    .home-menu-button > div {
+        position: relative;
+        width: 50%;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+    }
+    .online-button > div > img {
+        height: 80%;
+        padding-top: 10%;
+    }
+    .offline-button > div > img {
+        height: 100%;
+    }
+}
+
+@media (max-width: 1000px), (max-height: 1000px) {
+    .game {
+        display: flex;
+        justify-content: center;
+    }
+    .game > div {
+        position: absolute;
+        transform: scale(0.6);
+        transform-origin: top;
+    }
+}
+@media (max-width: 600px), (max-height: 600px) {
+    .game {
+        display: flex;
+        justify-content: center;
+    }
+    .game > div {
+        position: absolute;
+        transform: scale(0.4);
+        transform-origin: top;
+    }
+}
+@media (max-width: 350px), (max-height: 350px) {
+    .game {
+        display: flex;
+        justify-content: center;
+    }
+    .game > div {
+        position: absolute;
+        transform: scale(0.3);
+        transform-origin: top;
+    }
 }
