--- a/frontend/src/home.css
+++ b/frontend/src/home.css
@@ -47,6 +47,8 @@ div {
 }
 .header > .home-button {
     float: left;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(33deg)
+        brightness(103%) contrast(103%);
 }
 .header > .home-button:hover {
     cursor: pointer;
